Изменения главной страницы

--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Заголовок</h1>
+        <section>
+            <h2>Заголовок 1 секции</h2>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Заголовок 2 секции</h2>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Заголовок 3 секции</h2>
+            <ul>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
