Добавление информации на страницу

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <main>
-        <h1>Заголовок</h1>
+        <h1>Ягунов Анатолий Юрьевич</h1>
+        <h2>инженер по тестированию</h2>
         <section>
-            <h2>Заголовок 1 секции</h2>
+            <h2>Образование</h2>
             <ul>
-                <li>1</li>
+                <li>Средняя школа №27, г. Белово</li>
                 <li>2</li>
                 <li>3</li>
             </ul>
