feat (заголовок): добавление заголовка

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>Образование</h2>
             <ul>
                 <li>Средняя школа №27, г. Белово</li>
-                <li>2</li>
+                <li>ПТУ №22, г. Белово</li>
                 <li>3</li>
             </ul>
         </section>
