--- a/index.html
+++ b/index.html
@@ -1,38 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/app.css">
+  <title>Карта навыков верстальщика</title>
 </head>
 <body>
-    <main>
-        <h1>Ягунов Анатолий Юрьевич</h1>
-        <h2>инженер по тестированию</h2>
-        <section>
-            <h2>Образование</h2>
+  <main class="container">
+    <!-- BEGIN (write your solution here) -->
+    <h1>Карта навыков верстальщика</h1>
+    <h2>Базовый уровень</h2>
+    <ol>
+      <li>
+        HTML
+        <ul>
+          <li>Семантический HTML</li>
+          <li>Доступность</li>
+          <dl class="definitions">
+            <dt class="definitions-term">Семантический HTML</dt> 
+            <dd>Разметка с помощью семантических тегов и Schema.org</dd>
+            <dt class="definitions-term">Доступность</dt>
+            <dd>Разметка страницы для людей с ограниченными возможностями</dd>
+          </dl>
+        </ul>
+      </li>
+      <li>
+        CSS
+        <ul>
+          <li>
+            <h4>Основы</h4>
             <ul>
-                <li>Средняя школа №27, г. Белово</li>
-                <li>ПТУ №22, г. Белово</li>
-                <li>3</li>
+              <li>Селекторы</li>
+              <li>Каскадность</li>
+              <li>Базовае правила для работы с текстом</li>
+              <li>Базовая адаптивность с использованием медиазапросов</li>
+              <li>Базовая анимация с тспользованием transition</li>
+              <li>Псевдоклассы</li>
+              <li>Псевдоэлементы</li>
             </ul>
-        </section>
-        <section>
-            <h2>Заголовок 2 секции</h2>
+          </li>
+          <li>
+            <h4>Модули</h4>
             <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
+              <li>CSS Flexible Box Layout Module</li>
+              <li>CSS Grid Layout Module</li>
+              <li>CSS Multi-column Layout Module</li>
             </ul>
-        </section>
-        <section>
-            <h2>Заголовок 3 секции</h2>
+          </li>
+        </ul>
+      </li>
+      <li>
+        Инструменты
+        <ul>
+          <li>
+            <h4>HTML</h4>
             <ul>
-                <li>1</li>
-                <li>2</li>
-                <li>3</li>
+              <li>PUG</li>
+              <li>Emmet</li>
             </ul>
-        </section>
-    </main>
+          </li>
+          <li>
+            <h4>CSS</h4>
+            <ul>
+              <li>SASS</li>
+              <li>PostCSS</li>
+              <li>Stylelint</li>
+            </ul>
+          </li>
+          <li>
+            <h4>Другое</h4>
+            <ul>
+              <li>Bash</li>
+              <li>Git</li>
+              <li>NPM</li>
+              <li>DevTools</li>
+              <li>Code Editors (VSCode/Sublime Text/Atom/WebStorm)</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ol>
+    <!-- END -->
+  </main>
 </body>
 </html>
